# sankey-copier

./: .gitattributes  .gitignore  .mcp.json  Cargo.toml  Claude.md  DRAG_FIX_SUMMARY.md  LICENSE  README.md  SETUP.md  SETUP_GUIDE.md  STATE_MANAGEMENT_ANALYSIS.md  build-local.ps1  deploy-mtbridge.ps1  docker-compose.yml  e2e_test_output.txt  generate_icon.py  mt4_log.txt  mt5_log.txt  test_register.py
desktop/: .gitignore  (+5 more)
desktop-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
desktop/src-tauri/: Cargo.toml  build.rs  splash.html  tauri.conf.json
desktop/src-tauri/src/: main.rs
e2e-tests/: Cargo.toml
e2e-tests/certs/: server-key.pem  server.pem
e2e-tests/plans/: handoff.md  migration-plan.md  mql5-simulator-conformance.md
e2e-tests/src/: base.rs  helpers.rs  lib.rs  master.rs  relay_server_process.rs  slave.rs  types.rs
e2e-tests/src/adapters/infrastructure/: config.rs  mod.rs  process.rs
e2e-tests/src/application/: mod.rs  runner.rs  runner_tests.rs  sandbox.rs
e2e-tests/src/application/simulators/: master.rs  slave.rs
e2e-tests/src/domain/: mod.rs  simulators.rs  traits.rs
e2e-tests/src/platform/: ea_context_wrapper.rs  mod.rs  relay_server.rs  runner.rs  sandbox.rs  tests.rs  traits.rs  types.rs
e2e-tests/src/platform/context/: common.rs  master_context.rs  mod.rs  slave_context.rs
e2e-tests/tests/: api_strict_lifecycle.rs  config_distribution.rs  config_queue_behavior.rs  global_config.rs  global_config_test.rs  high_load.rs  master_toggle_slave_warning.rs  multi_master_concurrency.rs  order_filter.rs  order_lifecycle.rs  order_routing.rs  order_transform.rs  runtime_status.rs  sandbox_test.rs  smoke_test.rs  snapshot_broadcast.rs  symbol_auto_mapping.rs  sync_protocol.rs  warning_codes_realtime.rs  zmq_failure_simulation.rs
mt-bridge/: Cargo.toml  build.rs
mt-bridge/src/: communication.rs  constants.rs  ea_context.rs  ea_state.rs  errors.rs  ffi.rs  ffi_helpers.rs  ffi_types.rs  lib.rs  logger.rs  msgpack.rs  symbol_filter_tests.rs  sync.rs  ticket_mapper.rs  traits.rs  types.rs  victoria_logs.rs
mt-bridge/src/ffi/: accessors.rs  connection.rs  helpers.rs  lifecycle.rs  messaging.rs  mod.rs  topics.rs  trade.rs  types.rs
mt-bridge/src/msgpack/: ffi.rs  helpers.rs  mod.rs  serialization.rs  traits.rs  types.rs
mt-bridge/src/msgpack/tests/: ffi_tests.rs  mod.rs  repro_status_bug.rs  serialization_compat_tests.rs  serialization_tests.rs  types_tests.rs
mt-bridge/src/types/: mod.rs  tests.rs
relay-server/: .gitignore  Cargo.toml  amp  build.rs  config.test.toml  config.toml  config.toml.example  start-server.ps1
relay-server/src/: bootstrap.rs  broadcast_coordinator.rs  cert.rs  config.rs  config_builder.rs  connection_manager.rs  lib.rs  log_buffer.rs  logging.rs  main.rs  message_handler.rs  mt_detector.rs  mt_installer.rs  port_resolver.rs  runtime_status_updater.rs  victoria_logs.rs
relay-server/src/adapters/: mod.rs
relay-server/src/adapters/inbound/: mod.rs
relay-server/src/adapters/infrastructure/: cert.rs  connection_manager.rs  mod.rs  mt_detector.rs  mt_installer.rs
relay-server/src/adapters/outbound/: mod.rs
relay-server/src/api/: connections.rs  error.rs  helpers.rs  logs.rs  middleware.rs  mod.rs  mt_installations.rs  runtime_metrics.rs  settings.rs  trade_group_members.rs  trade_groups.rs  victoria_logs_settings.rs  websocket.rs  zeromq_settings.rs
relay-server/src/api/tests/: global_config_tests.rs  helpers_tests.rs  mod.rs  runtime_metrics_tests.rs  trade_group_members_tests.rs  victoria_logs_config_tests.rs  websocket_tests.rs
relay-server/src/application/: disconnection_service.rs  mod.rs  runtime_status_updater.rs  status_service.rs
relay-server/src/bootstrap/: logging.rs  mod.rs  server.rs  services.rs
relay-server/src/connection_manager/: mod.rs  monitor.rs  tests.rs  tests_transition.rs
relay-server/src/db/: config_distribution.rs  copy_settings.rs  global_settings.rs  mod.rs  send_failures.rs  trade_group_members.rs  trade_groups.rs
relay-server/src/engine/: mod.rs  tests.rs
relay-server/src/message_handler/: adapters.rs  config_request.rs  heartbeat.rs  mod.rs  position_snapshot.rs  register.rs  sync_request.rs  trade_signal.rs  unregister.rs
relay-server/src/models/: connection.rs  global_settings.rs  mod.rs  mt_installation.rs  settings_conversion_tests.rs  snapshot.rs  status.rs  status_engine.rs  trade_group.rs  trade_group_member.rs
relay-server/src/ports/: adapters.rs  mod.rs  outbound.rs
relay-server/src/services/: mod.rs  status_service.rs  trade_copy_service.rs
relay-server/src/zeromq/: config_publisher.rs  mod.rs  tests.rs
relay-server/tests/: config_distribution_test.rs  copy_settings_creation_test.rs  db_migration.rs  db_trade_groups.rs  e2e_config_test.rs  e2e_global_config_test.rs  e2e_master_config_test.rs  e2e_rest_api_test.rs  e2e_runtime_status_test.rs  e2e_sync_protocol_test.rs  e2e_trade_signal_test.rs  e2e_vlogs_config_test.rs  ea_communication_test.rs  mt_installations_api_test.rs  performance_benchmark_test.rs  reproduce_switch_issue.rs  runtime_metrics_api_test.rs  snapshot_broadcast_e2e.rs  symbol_transformation_e2e_test.rs  symbol_transformation_test.rs  test_server.rs  trade_group_members_api_test.rs  trade_groups_api_test.rs  zmq_failure_integration.rs  zmq_handlers_integration.rs
rust-server/: Cargo.toml  README.md  build.rs  config.dev.toml  config.toml  config.toml.example  start-server.ps1
rust-server/src/: config.rs  connection_manager.rs  lib.rs  log_buffer.rs  main.rs  message_handler.rs  mt_detector.rs  mt_installer.rs
rust-server/src/api/: error.rs  mod.rs  mt_installations.rs
rust-server/src/db/: mod.rs
rust-server/src/engine/: mod.rs  tests.rs
rust-server/src/models/: connection.rs  mod.rs  mt_installation.rs
rust-server/src/zeromq/: mod.rs
rust-server/tests/: config_distribution_test.rs  mt_installations_api_test.rs  performance_benchmark_test.rs
sankey-copier-tray/: Cargo.toml  build.rs
sankey-copier-tray/src/: config.rs  elevation.rs  icon.rs  main.rs  menu.rs  service.rs  ui.rs
(+459 files in other folders)
