# Sankey Copier Workspace
# Root configuration for all Rust projects in the monorepo

[workspace]
members = ["mt-bridge", "relay-server"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# ZeroMQ
zmq = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = { version = "1.0", features = ["backtrace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true
