# e2e-tests/Cargo.toml
#
# Separate crate for E2E tests with compile-time enforcement:
# - NO direct zmq dependency → forces use of mt-bridge FFI
# - Simulators use FFI functions only (same as real MQL EAs)
# - Tests use shared simulators (no custom ZMQ code in tests)

[package]
name = "sankey-copier-e2e-tests"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
name = "e2e_tests"
path = "src/lib.rs"

[dependencies]
# Shared types and FFI functions from mt-bridge
# NOTE: No direct zmq dependency - FFI functions only
sankey_copier_zmq = { path = "../mt-bridge", package = "sankey-copier-mt-bridge" }

# Serialization (for building test messages)
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tempfile = "3.14"

# For helpers module (DB seeding, async functions)
sankey-copier-relay-server = { path = "../relay-server" }
tokio = { version = "1.42", features = ["full"] }

[dev-dependencies]
# Async runtime test utilities
tokio = { version = "1.42", features = ["full", "test-util"] }
# HTTP client for API tests
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"

# WebSocket client for E2E tests
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"

# Database access for seeding test data
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Test utilities
serial_test = "3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
