[package]
name = "sankey-copier-mt-bridge"
version = "1.0.0"
edition = "2021"

[lib]
name = "sankey_copier_zmq"
crate-type = ["cdylib", "rlib"]  # cdylib for DLL, rlib for Rust dependency

[dependencies]
zmq = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

[build-dependencies]
winres = "0.1"
