[package]
name = "sankey-copier-mt-bridge"
version = "1.0.0"
edition = "2021"

[lib]
name = "sankey_copier_zmq"
crate-type = ["cdylib", "rlib"]  # cdylib for DLL, rlib for Rust dependency

[dependencies]
zmq = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

[build-dependencies]
winres = "0.1"
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }

[dev-dependencies]
mockito = "1.6"
serial_test = "3.2"
