[package]
name = "sankey-copier-relay-server"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "sankey-copier-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# ZeroMQ
zmq = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"
config = { version = "0.14", default-features = false, features = ["toml"] }
rmp-serde = "1.3"

# Shared message types
sankey_copier_zmq = { path = "../mt-bridge", package = "sankey-copier-mt-bridge" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = { version = "1.0", features = ["backtrace"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP Client (for VictoriaLogs integration)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# TLS/HTTPS
# Use tls-rustls-no-provider to avoid aws-lc-sys dependency, then use ring provider
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = "0.13"
rustls-pemfile = "2.2"
time = "0.3"

# Windows Registry (for MT4/MT5 detection)
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winver"] }

[dev-dependencies]
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
mockito = "1.6"
serial_test = "3.2"

[build-dependencies]
winres = "0.1"
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }
