[package]
name = "sankey-copier-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# ZeroMQ
zmq = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rmp-serde = "1.3"

# Shared message types
sankey_copier_zmq = { path = "../mql-zmq-dll" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sysinfo = "0.32"
