[package]
name = "sankey-copier-tray"
version = "1.0.0"
edition = "2021"

[dependencies]
# Tray icon
tray-icon = "0.19"
image = "0.25"

# Windows event loop
winit = "0.30"

# Windows service control
windows-service = "0.7"

# Windows API for UAC elevation
windows = { version = "0.58", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Web browser
webbrowser = "1.0"

# Global state
once_cell = "1.19"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce code size
strip = true        # Strip symbols
