[package]
name = "sankey-copier-desktop"
version = "0.1.0"
description = "SANKEY Copier Desktop Application"
authors = ["SANKEY Copier Project"]
license = "MIT"
repository = "https://github.com/your-org/sankey-copier"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
